# choroq-hg2-decomp

./: README.md  configure.py  pyproject.toml  rom_generate.sh
config/: hg2.eur.yaml
config/eur/: checksum.sha1  symbol_addrs.txt  undefined_funcs_auto.txt  undefined_syms_auto.txt
